# hybrid-rag-fastembed

./: .gitignore  README.md  questions.json
app/: .dockerignore  Dockerfile  pyproject.toml
app/chatbot/: access.txt  main.py  models.py  router.py
app/chatbot/core/: chat_controller.py  file_ingestion_controller.py
app/chatbot/routes/: file_ingestion.py
app/chatbot/utils/: conversation_manager.py  openai.py  qdrant.py  structlogger.py  text_extraction.py
app/controllers/: chat_controller.py
app/debug_extractions/: extracted_text_20241113_145727.txt  extracted_text_20241113_153347.txt  extracted_text_20241113_154140.txt
chatbot/: access.txt  main.py  models.py  pyproject.toml
chatbot/core/: chat_controller.py  file_ingestion_controller.py
chatbot/routes/: chat.py  status.py
chatbot/templates/: semantic_chunking_prompt.j2
chatbot/utils/: conversation_manager.py  openai.py  qdrant.py  session_manager.py
poc/: main.py  services.py
poc/service/: pyproject.toml
poc/service-be/: controllers.py  main.py  pyproject.toml  schemas.py  services.py
