[project]
name = "chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=24.1.0",
    "asyncio>=3.4.3",
    "fastapi[standard]>=0.115.2",
    "langchain-text-splitters>=0.3.2",
    "openai",
    "openpyxl>=3.1.5",
    "pymupdf>=1.1.2",
    "python-docx",
    "python-dotenv>=1.0.1",
    "qdrant-client>=1.12.0",
    "regex>=2023.12.25",
    "semantic-chunkers>=0.0.10",
    "structlog",
    "tenacity>=9.0.0",
    "uvicorn",
]
