[project]
name = "service"
version = "0.1.0"
description = "AI based Healtcare question categorization"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=24.1.0",
    "aiohttp",
    "asyncio>=3.4.3",
    "fastapi[standard]",
    "openai",
    "pandas>=2.2.3",
    "python-dotenv>=1.0.1",
    "ruff>=0.6.9",
    "structlog>=0.8.0",
    "tool",
]
