[project]
name = "service-be"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=24.1.0",
    "aiohttp>=1.51.0",
    "asyncio>=3.4.3",
    "fastapi[standard]",
    "openai",
    "python-dotenv>=1.0.1",
    "structlog",
]
