[project]
name = "service-be"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=24.1.0",
    "aiohttp>=1.51.0",
    "asyncio>=3.4.3",
    "certifi>=2024.8.30",
    "fastapi[standard]",
    "motor>=3.6.0",
    "openai",
    "python-dotenv>=1.0.1",
    "structlog",
]
